{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 123,
  "lineage": "3ada6e29-76df-58be-4f08-b406b57870ab",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "terraform-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/96f02f98-691d-455b-82fd-e650da6bf37b/resourceGroups/terraform-rg-azure/providers/Microsoft.Network/publicIPAddresses/terraform-IP-Azure",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.168.30.148",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "terraform-IP-Azure",
            "resource_group_name": "terraform-rg-azure",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "terraform-NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/96f02f98-691d-455b-82fd-e650da6bf37b/resourceGroups/terraform-rg-azure/providers/Microsoft.Network/networkInterfaces/terraform-NIC-Azure",
            "internal_domain_name_suffix": "mdxwe24oegwulaipjirn50dq1h.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal-IP",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/96f02f98-691d-455b-82fd-e650da6bf37b/resourceGroups/terraform-rg-azure/providers/Microsoft.Network/publicIPAddresses/terraform-IP-Azure",
                "subnet_id": "/subscriptions/96f02f98-691d-455b-82fd-e650da6bf37b/resourceGroups/terraform-rg-azure/providers/Microsoft.Network/virtualNetworks/terraform-Vnet-Azure/subnets/terraform-Subnet-Azure"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-FE-95-0A",
            "name": "terraform-NIC-Azure",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "terraform-rg-azure",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/96f02f98-691d-455b-82fd-e650da6bf37b/resourceGroups/terraform-rg-azure/providers/Microsoft.Compute/virtualMachines/terraform-VM1-Azure"
          },
          "dependencies": [
            "azurerm_public_ip.terraform-IP",
            "azurerm_resource_group.terraform-rg",
            "azurerm_subnet.terraform-Subnet",
            "azurerm_virtual_network.terraform-Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "terraform-NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/96f02f98-691d-455b-82fd-e650da6bf37b/resourceGroups/terraform-rg-azure/providers/Microsoft.Network/networkSecurityGroups/terraform-NSG-Azure",
            "location": "eastus",
            "name": "terraform-NSG-Azure",
            "resource_group_name": "terraform-rg-azure",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "terraform-NSG-dev-rule-Azure",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "88.156.176.0/20",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.terraform-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "terraform-NSG-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/96f02f98-691d-455b-82fd-e650da6bf37b/resourceGroups/terraform-rg-azure/providers/Microsoft.Network/networkSecurityGroups/terraform-NSG-Azure/securityRules/terraform-NSG-dev-rule-Azure",
            "name": "terraform-NSG-dev-rule-Azure",
            "network_security_group_name": "terraform-NSG-Azure",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "terraform-rg-azure",
            "source_address_prefix": "88.156.176.0/20",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.terraform-NSG",
            "azurerm_resource_group.terraform-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "terraform-IP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/96f02f98-691d-455b-82fd-e650da6bf37b/resourceGroups/terraform-rg-azure/providers/Microsoft.Network/publicIPAddresses/terraform-IP-Azure",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.168.30.148",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "terraform-IP-Azure",
            "resource_group_name": "terraform-rg-azure",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.terraform-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "terraform-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/96f02f98-691d-455b-82fd-e650da6bf37b/resourceGroups/terraform-rg-azure/providers/Microsoft.Network/virtualNetworks/terraform-Vnet-Azure/subnets/terraform-Subnet-Azure",
            "name": "terraform-Subnet-Azure",
            "resource_group_name": "terraform-rg-azure",
            "virtual_network_name": "terraform-Vnet-Azure"
          },
          "dependencies": [
            "azurerm_resource_group.terraform-rg",
            "azurerm_virtual_network.terraform-Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "terraform-NSG-rule-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/96f02f98-691d-455b-82fd-e650da6bf37b/resourceGroups/terraform-rg-azure/providers/Microsoft.Network/virtualNetworks/terraform-Vnet-Azure/subnets/terraform-Subnet-Azure",
            "network_security_group_id": "/subscriptions/96f02f98-691d-455b-82fd-e650da6bf37b/resourceGroups/terraform-rg-azure/providers/Microsoft.Network/networkSecurityGroups/terraform-NSG-Azure",
            "subnet_id": "/subscriptions/96f02f98-691d-455b-82fd-e650da6bf37b/resourceGroups/terraform-rg-azure/providers/Microsoft.Network/virtualNetworks/terraform-Vnet-Azure/subnets/terraform-Subnet-Azure"
          },
          "dependencies": [
            "azurerm_network_security_group.terraform-NSG",
            "azurerm_resource_group.terraform-rg",
            "azurerm_subnet.terraform-Subnet",
            "azurerm_virtual_network.terraform-Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "terraform-Vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7362ef60-21ce-45ad-810f-4a22dfe870df",
            "id": "/subscriptions/96f02f98-691d-455b-82fd-e650da6bf37b/resourceGroups/terraform-rg-azure/providers/Microsoft.Network/virtualNetworks/terraform-Vnet-Azure",
            "location": "eastus",
            "name": "terraform-Vnet-Azure",
            "resource_group_name": "terraform-rg-azure",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/96f02f98-691d-455b-82fd-e650da6bf37b/resourceGroups/terraform-rg-azure/providers/Microsoft.Network/virtualNetworks/terraform-Vnet-Azure/subnets/terraform-Subnet-Azure",
                "name": "terraform-Subnet-Azure",
                "security_group": "/subscriptions/96f02f98-691d-455b-82fd-e650da6bf37b/resourceGroups/terraform-rg-azure/providers/Microsoft.Network/networkSecurityGroups/terraform-NSG-Azure"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.terraform-rg"
          ]
        }
      ]
    }
  ]
}